# fastapi-auth-service

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260501_0001_auth_rbac_blacklist.py
app/: main.py
app/core/: config.py  database.py  security.py
app/helpers/: tokens.py  users.py
app/models/: __init__.py  rbac.py  token_blacklist.py  users.py
app/routers/: auth.py  users.py
app/schemas/: users.py
app/services/: auth.py  tokens.py
app/validations/: rbac.py  tokens.py  users.py
scripts/: init-env.sh  init-jwt-keys.sh  seed_rbac.py
tests/: conftest.py  factories.py  helpers.py
tests/api/: test_auth.py  test_db_isolation.py  test_main.py
tests/unit/: test_database.py  test_helpers_tokens.py  test_helpers_users.py  test_service_auth.py
