[project]
name = "fastapi-auth-service"
version = "0.1.0"
requires-python = ">=3.11"
authors = [{ name = "Balyko Vlad", email = "balyko.vlad1@mail.ru" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "bcrypt",
    "pyjwt[crypto]",
    "cryptography",
    "pydantic[email]",
    "pydantic-settings",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "ruff"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
